--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     const loadImages = () => {
     for (let i = 1; i <= 25; i++) { 
       const img = document.createElement('img');
-      img.src = `assets/image/image (${i}).JPG`; 
-      img.alt = 'love you';
+      img.src = `assets/image/foto (${i}).JPG`; 
+      // img.alt = 'love you';
       img.style.maxWidth = '200px'; 
       img.style.margin = '10px';
       img.setAttribute('loading', 'lazy'); 
