--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <div id="gallery-container" style="display:none;">
     <audio class="song" loop autoplay>
-      <source src="lagu.mp3">
+      <source src="lagu(1).mp3">
       Your browser isn't invited for super fun audio time.
     </audio>
 
